--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -188,7 +188,7 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
 	sctk_multirail.c sctk_net_tools.c sctk_net_topology.c \
-	sctk_rail.c sctk_reorder.c sctk_route.c \
+	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
@@ -250,10 +250,10 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_control_messages.lo ft.lo group.lo communicator.lo \
 	shm_coll.lo lowcomm_config.lo sctk_handle.lo \
 	sctk_low_level_comm.lo sctk_multirail.lo sctk_net_tools.lo \
-	sctk_net_topology.lo sctk_rail.lo sctk_reorder.lo \
-	sctk_route.lo sctk_topological_polling.lo \
-	sctk_topological_rail.lo sctk_window.lo workshare.lo \
-	./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
+	sctk_net_topology.lo sctk_rail.lo sctk_reorder.lo endpoint.lo \
+	sctk_topological_polling.lo sctk_topological_rail.lo \
+	sctk_window.lo ./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
+	./tcp/sctk_tcp_toolkit.lo ./shm/sctk_handler_mpi.lo \
 	./tcp/sctk_tcp_toolkit.lo ./shm/sctk_shm.lo \
 	./shm/sctk_shm_eager.lo ./shm/sctk_shm_raw_queues.lo \
 	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
@@ -649,7 +649,7 @@ libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
 	sctk_multirail.c sctk_net_tools.c sctk_net_topology.c \
-	sctk_rail.c sctk_reorder.c sctk_route.c \
+	sctk_rail.c sctk_reorder.c endpoint.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
@@ -863,6 +863,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/coll.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/communicator.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/endpoint.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ft.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/group.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
@@ -875,7 +876,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_topology.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_reorder.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_route.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_polling.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_topological_rail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_window.Plo@am__quote@
