--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -187,10 +187,10 @@ libmpclowcomm_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
-	sctk_multirail.c sctk_net_tools.c sctk_net_topology.c \
-	sctk_rail.c sctk_reorder.c endpoint.c \
-	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	multirail.c sctk_net_tools.c sctk_net_topology.c sctk_rail.c \
+	sctk_reorder.c endpoint.c sctk_topological_polling.c \
+	sctk_topological_rail.c sctk_window.c ./tcp/sctk_tcp.c \
+	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
@@ -249,7 +249,7 @@ am__dirstamp = $(am__leading_dot)dirstamp
 am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_control_messages.lo ft.lo group.lo communicator.lo \
 	shm_coll.lo lowcomm_config.lo sctk_handle.lo \
-	sctk_low_level_comm.lo sctk_multirail.lo sctk_net_tools.lo \
+	sctk_low_level_comm.lo multirail.lo sctk_net_tools.lo \
 	sctk_net_topology.lo sctk_rail.lo sctk_reorder.lo endpoint.lo \
 	sctk_topological_polling.lo sctk_topological_rail.lo \
 	sctk_window.lo ./tcp/sctk_tcp.lo ./tcp/sctk_tcp_rdma.lo \
@@ -648,10 +648,10 @@ lib_LTLIBRARIES = libmpclowcomm.la
 libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_control_messages.c ft.c group.c communicator.c shm_coll.c \
 	lowcomm_config.c sctk_handle.c sctk_low_level_comm.c \
-	sctk_multirail.c sctk_net_tools.c sctk_net_topology.c \
-	sctk_rail.c sctk_reorder.c endpoint.c \
-	sctk_topological_polling.c sctk_topological_rail.c \
-	sctk_window.c workshare.c ./tcp/sctk_tcp.c \
+	multirail.c sctk_net_tools.c sctk_net_topology.c sctk_rail.c \
+	sctk_reorder.c endpoint.c sctk_topological_polling.c \
+	sctk_topological_rail.c sctk_window.c ./tcp/sctk_tcp.c \
+	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./tcp/sctk_tcp_rdma.c ./tcp/sctk_tcp_toolkit.c \
 	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
 	./shm/sctk_shm_raw_queues.c ./shm/sctk_shm_cma.c \
@@ -867,11 +867,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ft.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/group.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/lowcomm_config.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multirail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_checksum.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_control_messages.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_handle.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_low_level_comm.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_multirail.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_tools.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_net_topology.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sctk_rail.Plo@am__quote@
