--- a/src/MPC_IO/src/Makefile.in
+++ b/src/MPC_IO/src/Makefile.in
@@ -394,10 +394,13 @@ MPC_CONFIG_SCHED_RR = @MPC_CONFIG_SCHED_RR@
 MPC_CONFIG_SEM_FAILED = @MPC_CONFIG_SEM_FAILED@
 MPC_CONFIG_SEM_VALUE_MAX = @MPC_CONFIG_SEM_VALUE_MAX@
 MPC_FORTRAN_ENABLED = @MPC_FORTRAN_ENABLED@
+MPC_FORTRAN_PKGCONFIG_CFLAGS = @MPC_FORTRAN_PKGCONFIG_CFLAGS@
+MPC_FORTRAN_PKGCONFIG_LIB = @MPC_FORTRAN_PKGCONFIG_LIB@
 MPC_GENERATION_DATE = @MPC_GENERATION_DATE@
 MPC_HAVE_DMTCP = @MPC_HAVE_DMTCP@
 MPC_HAVE_PROFILER = @MPC_HAVE_PROFILER@
 MPC_IN_PROCESS_MODE = @MPC_IN_PROCESS_MODE@
+MPC_IO_PKGCONFIG_LIB = @MPC_IO_PKGCONFIG_LIB@
 MPC_LAUNCHER = @MPC_LAUNCHER@
 MPC_LAUNCHER_PROGRAM = @MPC_LAUNCHER_PROGRAM@
 MPC_LOWCOMM_ENABLED = @MPC_LOWCOMM_ENABLED@
@@ -410,6 +413,7 @@ MPC_OPENMP_ENABLED = @MPC_OPENMP_ENABLED@
 MPC_TARGET_ARCHITECTURE = @MPC_TARGET_ARCHITECTURE@
 MPC_THREAD_ENABLED = @MPC_THREAD_ENABLED@
 MPC_THREAD_KEYS_MAX = @MPC_THREAD_KEYS_MAX@
+MPC_THREAD_PKGCONFIG_DEP = @MPC_THREAD_PKGCONFIG_DEP@
 MPC_VERSION_MAJOR = @MPC_VERSION_MAJOR@
 MPC_VERSION_MINOR = @MPC_VERSION_MINOR@
 MPC_VERSION_PATCH = @MPC_VERSION_PATCH@
