--- a/pkgconfig/Makefile.am
+++ b/pkgconfig/Makefile.am
@@ -2,3 +2,11 @@
 mpcpkgconfigdir=$(libdir)/pkgconfig/
 
 mpcpkgconfig_DATA = libmpclowcomm.pc
+
+if MPC_THREAD_ENABLED
+  mpcpkgconfig_DATA += libmpcthread.pc
+endif
+
+if MPC_MPI_ENABLED
+  mpcpkgconfig_DATA += libmpcmpi.pc
+endif
