--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,7 @@
 #                                                                      #
 ########################################################################
 ACLOCAL_AMFLAGS=-I config/m4
-SUBDIRS=src pkgconfig
+SUBDIRS=src pkgconfig cmake
 
 #
 # Override autoconf for maintainer mode
