--- a/cmake/Makefile.in
+++ b/cmake/Makefile.in
@@ -88,9 +88,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@MPC_THREAD_ENABLED_TRUE@am__append_1 = libmpcthread.pc
-@MPC_MPI_ENABLED_TRUE@am__append_2 = libmpcmpi.pc
-subdir = pkgconfig
+subdir = cmake
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/m4/ax_gcc_builtin.m4 \
 	$(top_srcdir)/config/m4/ax_gcc_func_attribute.m4 \
@@ -108,7 +106,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/mpc_config.h
-CONFIG_CLEAN_FILES = libmpclowcomm.pc libmpcthread.pc libmpcmpi.pc
+CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -156,11 +154,11 @@ am__uninstall_files_from_dir = { \
     || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
-am__installdirs = "$(DESTDIR)$(mpcpkgconfigdir)"
-DATA = $(mpcpkgconfig_DATA)
+am__installdirs = "$(DESTDIR)$(mpcmakedir)" \
+	"$(DESTDIR)$(mpcmakeexampledir)"
+DATA = $(mpcmake_DATA) $(mpcmakeexample_DATA)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
-am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/libmpclowcomm.pc.in \
-	$(srcdir)/libmpcmpi.pc.in $(srcdir)/libmpcthread.pc.in
+am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 ALLOC_CFLAGS = @ALLOC_CFLAGS@
@@ -432,8 +430,10 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-mpcpkgconfigdir = $(libdir)/pkgconfig/
-mpcpkgconfig_DATA = libmpclowcomm.pc $(am__append_1) $(am__append_2)
+mpcmakedir = $(pkgdatadir)/cmake/
+mpcmake_DATA = mpcframework-config.cmake
+mpcmakeexampledir = $(pkgdatadir)/cmake/example/
+mpcmakeexample_DATA = ./example/t.c ./example/CMakeLists.txt
 all: all-am
 
 .SUFFIXES:
@@ -446,9 +446,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign pkgconfig/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign cmake/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign pkgconfig/Makefile
+	  $(AUTOMAKE) --foreign cmake/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -466,39 +466,54 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-libmpclowcomm.pc: $(top_builddir)/config.status $(srcdir)/libmpclowcomm.pc.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-libmpcthread.pc: $(top_builddir)/config.status $(srcdir)/libmpcthread.pc.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-libmpcmpi.pc: $(top_builddir)/config.status $(srcdir)/libmpcmpi.pc.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
 	-rm -f *.lo
 
 clean-libtool:
 	-rm -rf .libs _libs
-install-mpcpkgconfigDATA: $(mpcpkgconfig_DATA)
+install-mpcmakeDATA: $(mpcmake_DATA)
 	@$(NORMAL_INSTALL)
-	@list='$(mpcpkgconfig_DATA)'; test -n "$(mpcpkgconfigdir)" || list=; \
+	@list='$(mpcmake_DATA)'; test -n "$(mpcmakedir)" || list=; \
 	if test -n "$$list"; then \
-	  echo " $(MKDIR_P) '$(DESTDIR)$(mpcpkgconfigdir)'"; \
-	  $(MKDIR_P) "$(DESTDIR)$(mpcpkgconfigdir)" || exit 1; \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(mpcmakedir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(mpcmakedir)" || exit 1; \
 	fi; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
 	done | $(am__base_list) | \
 	while read files; do \
-	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(mpcpkgconfigdir)'"; \
-	  $(INSTALL_DATA) $$files "$(DESTDIR)$(mpcpkgconfigdir)" || exit $$?; \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(mpcmakedir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(mpcmakedir)" || exit $$?; \
 	done
 
-uninstall-mpcpkgconfigDATA:
+uninstall-mpcmakeDATA:
 	@$(NORMAL_UNINSTALL)
-	@list='$(mpcpkgconfig_DATA)'; test -n "$(mpcpkgconfigdir)" || list=; \
+	@list='$(mpcmake_DATA)'; test -n "$(mpcmakedir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	dir='$(DESTDIR)$(mpcpkgconfigdir)'; $(am__uninstall_files_from_dir)
+	dir='$(DESTDIR)$(mpcmakedir)'; $(am__uninstall_files_from_dir)
+install-mpcmakeexampleDATA: $(mpcmakeexample_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(mpcmakeexample_DATA)'; test -n "$(mpcmakeexampledir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(mpcmakeexampledir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(mpcmakeexampledir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(mpcmakeexampledir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(mpcmakeexampledir)" || exit $$?; \
+	done
+
+uninstall-mpcmakeexampleDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(mpcmakeexample_DATA)'; test -n "$(mpcmakeexampledir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(mpcmakeexampledir)'; $(am__uninstall_files_from_dir)
 tags TAGS:
 
 ctags CTAGS:
@@ -540,7 +555,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(DATA)
 installdirs:
-	for dir in "$(DESTDIR)$(mpcpkgconfigdir)"; do \
+	for dir in "$(DESTDIR)$(mpcmakedir)" "$(DESTDIR)$(mpcmakeexampledir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -593,7 +608,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-mpcpkgconfigDATA
+install-data-am: install-mpcmakeDATA install-mpcmakeexampleDATA
 
 install-dvi: install-dvi-am
 
@@ -637,7 +652,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-mpcpkgconfigDATA
+uninstall-am: uninstall-mpcmakeDATA uninstall-mpcmakeexampleDATA
 
 .MAKE: install-am install-strip
 
@@ -647,12 +662,13 @@ uninstall-am: uninstall-mpcpkgconfigDATA
 	install install-am install-data install-data-am install-dvi \
 	install-dvi-am install-exec install-exec-am install-html \
 	install-html-am install-info install-info-am install-man \
-	install-mpcpkgconfigDATA install-pdf install-pdf-am install-ps \
-	install-ps-am install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
-	ps ps-am tags-am uninstall uninstall-am \
-	uninstall-mpcpkgconfigDATA
+	install-mpcmakeDATA install-mpcmakeexampleDATA install-pdf \
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-generic \
+	mostlyclean-libtool pdf pdf-am ps ps-am tags-am uninstall \
+	uninstall-am uninstall-mpcmakeDATA \
+	uninstall-mpcmakeexampleDATA
 
 .PRECIOUS: Makefile
 
