--- a/src/bin/mpcvars.sh.in
+++ b/src/bin/mpcvars.sh.in
@@ -44,4 +44,7 @@ fi
 PKG_CONFIG_PATH="${MPC_INSTALL_DIR_PREFIX}/lib/pkgconfig/:${PKG_CONFIG_PATH}"
 export PKG_CONFIG_PATH
 
+MPCFRAMEWORK_DIR="${MPC_INSTALL_DIR_PREFIX}/share/mpcframework/cmake/"
+export MPCFRAMEWORK_DIR
+
 echo "Loading MPC ${MPC_VERSION} from ${MPC_INSTALL_DIR_PREFIX}"
