--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -191,23 +191,21 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c \
 	sctk_rail.c sctk_reorder.c sctk_route.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_handler_mpi.c \
-	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
-	./shm/sctk_shm_mapper.c ./shm/sctk_shm_raw_queues.c \
-	./shm/sctk_handler_pmi.c ./shm/sctk_shm_cma.c \
-	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
-	./shm/sctk_shm_raw_queues_internals.c ./ib/sctk_ib_async.c \
-	./ib/sctk_ib_buffered.c ./ib/sctk_ib.c ./ib/sctk_ib_cm.c \
-	./ib/sctk_ib_config.c ./ib/sctk_ib_cp.c ./ib/sctk_ib_device.c \
-	./ib/sctk_ib_eager.c ./ib/sctk_ib_mmu.c ./ib/sctk_ib_mpi.c \
-	./ib/sctk_ib_polling.c ./ib/sctk_ib_qp.c ./ib/sctk_ib_rdma.c \
-	./ib/sctk_ib_toolkit.c ./ib/sctk_ib_topology.c \
-	./ib/sctk_ibufs.c ./ib/sctk_ibufs_rdma.c \
-	./portals/sctk_portals.c ./portals/sctk_ptl_cm.c \
-	./portals/sctk_ptl_eager.c ./portals/sctk_ptl_iface.c \
-	./portals/sctk_ptl_offcoll.c ./portals/sctk_ptl_rdma.c \
-	./portals/sctk_ptl_rdv.c ./portals/sctk_ptl_toolkit.c \
-	./portals_am/sctk_ptl_am_iface.c \
+	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
+	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
+	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
+	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
+	./ib/sctk_ib_async.c ./ib/sctk_ib_buffered.c ./ib/sctk_ib.c \
+	./ib/sctk_ib_cm.c ./ib/sctk_ib_config.c ./ib/sctk_ib_cp.c \
+	./ib/sctk_ib_device.c ./ib/sctk_ib_eager.c ./ib/sctk_ib_mmu.c \
+	./ib/sctk_ib_mpi.c ./ib/sctk_ib_polling.c ./ib/sctk_ib_qp.c \
+	./ib/sctk_ib_rdma.c ./ib/sctk_ib_toolkit.c \
+	./ib/sctk_ib_topology.c ./ib/sctk_ibufs.c \
+	./ib/sctk_ibufs_rdma.c ./portals/sctk_portals.c \
+	./portals/sctk_ptl_cm.c ./portals/sctk_ptl_eager.c \
+	./portals/sctk_ptl_iface.c ./portals/sctk_ptl_offcoll.c \
+	./portals/sctk_ptl_rdma.c ./portals/sctk_ptl_rdv.c \
+	./portals/sctk_ptl_toolkit.c ./portals_am/sctk_ptl_am_iface.c \
 	./portals_am/sctk_ptl_am_toolkit.c \
 	./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c \
 	./ofi/ofi.c ./ofi/ofi_msg.c ./ofi/ofi_rdma.c \
@@ -255,13 +253,11 @@ am_libmpclowcomm_la_OBJECTS = coll.lo comm.lo sctk_checksum.lo \
 	sctk_route.lo sctk_topological_polling.lo \
 	sctk_topological_rail.lo sctk_window.lo ./tcp/sctk_tcp.lo \
 	./tcp/sctk_tcp_rdma.lo ./tcp/sctk_tcp_toolkit.lo \
-	./shm/sctk_handler_mpi.lo ./shm/sctk_shm.lo \
-	./shm/sctk_shm_eager.lo ./shm/sctk_shm_mapper.lo \
-	./shm/sctk_shm_raw_queues.lo ./shm/sctk_handler_pmi.lo \
-	./shm/sctk_shm_cma.lo ./shm/sctk_shm_frag.lo \
-	./shm/sctk_shm_qemu.lo ./shm/sctk_shm_raw_queues_internals.lo \
-	$(am__objects_1) $(am__objects_2) $(am__objects_3) \
-	$(am__objects_4)
+	./shm/sctk_shm.lo ./shm/sctk_shm_eager.lo \
+	./shm/sctk_shm_raw_queues.lo ./shm/sctk_shm_cma.lo \
+	./shm/sctk_shm_frag.lo ./shm/sctk_shm_qemu.lo \
+	./shm/sctk_shm_raw_queues_internals.lo $(am__objects_1) \
+	$(am__objects_2) $(am__objects_3) $(am__objects_4)
 libmpclowcomm_la_OBJECTS = $(am_libmpclowcomm_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -650,13 +646,12 @@ libmpclowcomm_la_SOURCES = coll.c comm.c sctk_checksum.c \
 	sctk_rail.c sctk_reorder.c sctk_route.c \
 	sctk_topological_polling.c sctk_topological_rail.c \
 	sctk_window.c ./tcp/sctk_tcp.c ./tcp/sctk_tcp_rdma.c \
-	./tcp/sctk_tcp_toolkit.c ./shm/sctk_handler_mpi.c \
-	./shm/sctk_shm.c ./shm/sctk_shm_eager.c \
-	./shm/sctk_shm_mapper.c ./shm/sctk_shm_raw_queues.c \
-	./shm/sctk_handler_pmi.c ./shm/sctk_shm_cma.c \
-	./shm/sctk_shm_frag.c ./shm/sctk_shm_qemu.c \
-	./shm/sctk_shm_raw_queues_internals.c $(am__append_4) \
-	$(am__append_6) $(am__append_8) $(am__append_9)
+	./tcp/sctk_tcp_toolkit.c ./shm/sctk_shm.c \
+	./shm/sctk_shm_eager.c ./shm/sctk_shm_raw_queues.c \
+	./shm/sctk_shm_cma.c ./shm/sctk_shm_frag.c \
+	./shm/sctk_shm_qemu.c ./shm/sctk_shm_raw_queues_internals.c \
+	$(am__append_4) $(am__append_6) $(am__append_8) \
+	$(am__append_9)
 
 # library dependency #
 libmpclowcomm_la_LIBADD = $(ALLOC_LIBS) \
@@ -746,16 +741,10 @@ shm/$(am__dirstamp):
 shm/$(DEPDIR)/$(am__dirstamp):
 	@$(MKDIR_P) ./shm/$(DEPDIR)
 	@: > shm/$(DEPDIR)/$(am__dirstamp)
-./shm/sctk_handler_mpi.lo: shm/$(am__dirstamp) \
-	shm/$(DEPDIR)/$(am__dirstamp)
 ./shm/sctk_shm.lo: shm/$(am__dirstamp) shm/$(DEPDIR)/$(am__dirstamp)
 ./shm/sctk_shm_eager.lo: shm/$(am__dirstamp) \
 	shm/$(DEPDIR)/$(am__dirstamp)
-./shm/sctk_shm_mapper.lo: shm/$(am__dirstamp) \
-	shm/$(DEPDIR)/$(am__dirstamp)
 ./shm/sctk_shm_raw_queues.lo: shm/$(am__dirstamp) \
-	shm/$(DEPDIR)/$(am__dirstamp)
-./shm/sctk_handler_pmi.lo: shm/$(am__dirstamp) \
 	shm/$(DEPDIR)/$(am__dirstamp)
 ./shm/sctk_shm_cma.lo: shm/$(am__dirstamp) \
 	shm/$(DEPDIR)/$(am__dirstamp)
@@ -918,13 +907,10 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./portals_am/$(DEPDIR)/sctk_ptl_am_arpc_api.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals_am/$(DEPDIR)/sctk_ptl_am_iface.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals_am/$(DEPDIR)/sctk_ptl_am_toolkit.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_handler_mpi.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_handler_pmi.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_cma.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_eager.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_frag.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_mapper.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_qemu.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./shm/$(DEPDIR)/sctk_shm_raw_queues_internals.Plo@am__quote@
